clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__20050124_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/20050124-1.c" (c, x86_64-unknown-linux-gnu)
fn foo(%arg0: s32i, %arg1: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %52 = alloca s32i, "i", align 4
        %53 = alloca s32i, "j", align 4
        %54 = alloca s32i, "__retval", align 4
        %55 = alloca s32i, "k", align 4
        store %arg0, %52
        store %arg1, %53
        %56 = load %52 : s32i, align 4
        %57 = const 1 : s32i
        %58 = add %56, %57 : s32i [nsw]
        store %58, %55, align 4
        scope {
            %61 = load %53 : s32i, align 4
            %62 = cast(int_to_bool) %61 : bool
            if %62 {
                scope {
                    %63 = load %55 : s32i, align 4
                    %64 = const 0 : s32i
                    %65 = cmp gt %63, %64 : bool
                    if %65 {
                        %71 = load %55 : s32i, align 4
                        %72 = inc %71 : s32i [nsw]
                        store %72, %55, align 4
                        yield
                    } else {
                        scope {
                            %66 = load %55 : s32i, align 4
                            %67 = const 0 : s32i
                            %68 = cmp lt %66, %67 : bool
                            if %68 {
                                %69 = load %55 : s32i, align 4
                                %70 = dec %69 : s32i [nsw]
                                store %70, %55, align 4
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        %59 = load %55 : s32i, align 4
        store %59, %54
        %60 = load %54 : s32i
        return %60
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %46 = const -2 : s32i
        %47 = const 0 : s32i
        %48 = call @foo(%46, %47) : s32i [all]
        %49 = const -1 : s32i
        %50 = cmp ne %48, %49 : bool
        if %50 {
            %51 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %40 = const -1 : s32i
        %41 = const 0 : s32i
        %42 = call @foo(%40, %41) : s32i [all]
        %43 = const 0 : s32i
        %44 = cmp ne %42, %43 : bool
        if %44 {
            %45 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %34 = const 0 : s32i
        %35 = const 0 : s32i
        %36 = call @foo(%34, %35) : s32i [all]
        %37 = const 1 : s32i
        %38 = cmp ne %36, %37 : bool
        if %38 {
            %39 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %28 = const 1 : s32i
        %29 = const 0 : s32i
        %30 = call @foo(%28, %29) : s32i [all]
        %31 = const 2 : s32i
        %32 = cmp ne %30, %31 : bool
        if %32 {
            %33 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %22 = const -2 : s32i
        %23 = const 1 : s32i
        %24 = call @foo(%22, %23) : s32i [all]
        %25 = const -2 : s32i
        %26 = cmp ne %24, %25 : bool
        if %26 {
            %27 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %16 = const -1 : s32i
        %17 = const 1 : s32i
        %18 = call @foo(%16, %17) : s32i [all]
        %19 = const 0 : s32i
        %20 = cmp ne %18, %19 : bool
        if %20 {
            %21 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %10 = const 0 : s32i
        %11 = const 1 : s32i
        %12 = call @foo(%10, %11) : s32i [all]
        %13 = const 2 : s32i
        %14 = cmp ne %12, %13 : bool
        if %14 {
            %15 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %4 = const 1 : s32i
        %5 = const 1 : s32i
        %6 = call @foo(%4, %5) : s32i [all]
        %7 = const 3 : s32i
        %8 = cmp ne %6, %7 : bool
        if %8 {
            %9 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
